--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,11 @@
-# Python
 __pycache__/
 *.py[cod]
 *$py.class
 venv/
-.venv/
-env/
 .env
 .env.local
-
-# IDEs
+bats.log
+state.json
+backtest_results_*.json
 .vscode/
 .idea/
-
-# Project Files
-*.json
-!src/backtest/*.json
-backtest_results_*.json
-
-
-*.log
